# regions

./: .gitignore  AUTHORS  Diorite.hs  NOTES  Regions.hs  diorite.cabal
examples/: Sanity.hs  Small.hs
src/Language/: Diorite.hs
src/Language/Diorite/: Decoration.hs  Interpretation.hs  Qualifiers.hs  Region.hs  Signatures.hs  Sugar.hs  Syntax.hs  Traversal.hs
src/Language/Diorite/Qualifiers/: Witness.hs
src/Language/Diorite/Region/: Annotate.hs  Annotation.hs  Label.hs  Labels.hs  Monad.hs  Qualifiers.hs  Syntax.hs
src/Language/Diorite/Region/Labels/: Witness.hs
tests/: Annotate.hs  Rgn.hs  SmartSym.hs  SmartSymQ.hs  Wit.hs
